--- a/items.yml
+++ b/items.yml
@@ -19,6 +19,14 @@ items:
           id: 3
         buyPrice: 30.0
         sellPrice: 0.1
+      4:
+        type: ITEM
+        item:
+          id: 373
+          data: 8259
+          stack: 1
+        buyPrice: 30.0
+        sellPrice: 0.1
   2:
     items:
       1:
@@ -31,7 +39,7 @@ items:
         type: ITEM
         item:
           id: 365
-        buyPrice: 300.0
+        buyPrice: 30.0
         sellPrice: 50.0
       3:
         type: ITEM
@@ -39,3 +47,118 @@ items:
           id: 366
         buyPrice: 30.0
         sellPrice: 0.1                        
+      4:
+        type: ITEM
+        item:
+          id: 366
+        buyPrice: 30.0
+        sellPrice: 0.1                        
+      5:
+        type: ITEM
+        item:
+          id: 366
+        buyPrice: 30.0
+        sellPrice: 0.1                        
+      6:
+        type: ITEM
+        item:
+          id: 366
+        buyPrice: 30.0
+        sellPrice: 0.1                        
+      7:
+        type: ITEM
+        item:
+          id: 366
+        buyPrice: 30.0
+        sellPrice: 0.1                        
+      8:
+        type: ITEM
+        item:
+          id: 366
+        buyPrice: 30.0
+        sellPrice: 0.1                        
+      9:
+        type: ITEM
+        item:
+          id: 366
+        buyPrice: 30.0
+        sellPrice: 0.1                        
+      10:
+        type: ITEM
+        item:
+          id: 366
+        buyPrice: 30.0
+        sellPrice: 0.1                        
+      11:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      12:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      13:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      14:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      15:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      16:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      17:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      18:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      19:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      20:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      21:
+        type: ITEM
+        item:
+          id: 367
+        buyPrice: 300.0
+        sellPrice: 5.1                        
+      22:
+        type: ITEM
+        item:
+          id: 368
+          stack: 16
+        buyPrice: 300.0
+        sellPrice: 5.1                        
