--- a/items.yml
+++ b/items.yml
@@ -1,164 +1,315 @@
 items:
-  1:
+  '1':
     items:
-      1:
-        type: ITEM
-        item:
-          id: 1
-        buyPrice: 30.0
-        sellPrice: 0.1
-      2:
-        type: ITEM
-        item:
-          id: 2
-        buyPrice: 30.0
-        sellPrice: 0.1
-      3:
+      '1':
         type: ITEM
         item:
           id: 3
+          data: 0
         buyPrice: 30.0
-        sellPrice: 0.1
-      4:
+        sellPrice: 2.0
+      '2':
         type: ITEM
         item:
-          id: 373
-          data: 8259
-          stack: 1
+          id: 1
+          data: 0
         buyPrice: 30.0
-        sellPrice: 0.1
-  2:
+        sellPrice: 2.0
+      '3':
+        type: ITEM
+        item:
+          id: 17
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '4':
+        type: ITEM
+        item:
+          id: 2
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '5':
+        type: ITEM
+        item:
+          id: 12
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '6':
+        type: ITEM
+        item:
+          id: 49
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '7':
+        type: ITEM
+        item:
+          id: 155
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '8':
+        type: ITEM
+        item:
+          id: 79
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '9':
+        type: ITEM
+        item:
+          id: 174
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '10':
+        type: ITEM
+        item:
+          id: 46
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '11':
+        type: ITEM
+        item:
+          id: 4
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '12':
+        type: ITEM
+        item:
+          id: 13
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+  '2':
     items:
-      1:
+      '1':
         type: ITEM
         item:
-          id: 364
+          id: 296
+          data: 0
         buyPrice: 30.0
-        sellPrice: 0.1
-      2:
+        sellPrice: 2.0
+      '2':
         type: ITEM
         item:
-          id: 365
+          id: 392
+          data: 0
         buyPrice: 30.0
-        sellPrice: 50.0
-      3:
+        sellPrice: 2.0
+      '3':
         type: ITEM
         item:
-          id: 366
+          id: 391
+          data: 0
         buyPrice: 30.0
-        sellPrice: 0.1                        
-      4:
+        sellPrice: 2.0
+      '4':
         type: ITEM
         item:
-          id: 366
+          id: 354
+          data: 0
         buyPrice: 30.0
-        sellPrice: 0.1                        
-      5:
-        type: ITEM
-        item:
-          id: 366
-        buyPrice: 30.0
-        sellPrice: 0.1                        
-      6:
-        type: ITEM
-        item:
-          id: 366
-        buyPrice: 30.0
-        sellPrice: 0.1                        
-      7:
-        type: ITEM
-        item:
-          id: 366
-        buyPrice: 30.0
-        sellPrice: 0.1                        
-      8:
-        type: ITEM
-        item:
-          id: 366
-        buyPrice: 30.0
-        sellPrice: 0.1                        
-      9:
-        type: ITEM
-        item:
-          id: 366
-        buyPrice: 30.0
-        sellPrice: 0.1                        
-      10:
-        type: ITEM
-        item:
-          id: 366
-        buyPrice: 30.0
-        sellPrice: 0.1                        
-      11:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      12:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      13:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      14:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      15:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      16:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      17:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      18:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      19:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      20:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      21:
-        type: ITEM
-        item:
-          id: 367
-        buyPrice: 300.0
-        sellPrice: 5.1                        
-      22:
+        sellPrice: 2.0
+  '3':
+    items:
+      '1':
         type: ITEM
         item:
           id: 368
+          data: 0
           stack: 16
-        buyPrice: 300.0
-        sellPrice: 5.1                        
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '2':
+        type: ITEM
+        item:
+          id: 367
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '3':
+        type: ITEM
+        item:
+          id: 375
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '4':
+        type: ITEM
+        item:
+          id: 369
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '5':
+        type: ITEM
+        item:
+          id: 287
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '6':
+        type: ITEM
+        item:
+          id: 341
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '7':
+        type: ITEM
+        item:
+          id: 344
+          data: 0
+          stack: 16
+        buyPrice: 30.0
+        sellPrice: 2.0
+  '4':
+    items:
+      '1':
+        type: ITEM
+        item:
+          id: 322
+          data: 0
+          stack: 16
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '2':
+        type: ITEM
+        item:
+          id: 322
+          data: 1
+          stack: 16
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '3':
+        type: ITEM
+        item:
+          id: 349
+          data: 0
+          stack: 16
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '4':
+        type: ITEM
+        item:
+          id: 349
+          data: 1
+          stack: 16
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '5':
+        type: ITEM
+        item:
+          id: 349
+          data: 2
+          stack: 16
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '6':
+        type: ITEM
+        item:
+          id: 349
+          data: 3
+          stack: 16
+        buyPrice: 30.0
+        sellPrice: 2.0
+  '5':
+    items:
+      '1':
+        type: ITEM
+        item:
+          id: 331
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '2':
+        type: ITEM
+        item:
+          id: 29
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '3':
+        type: ITEM
+        item:
+          id: 33
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '4':
+        type: ITEM
+        item:
+          id: 356
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '5':
+        type: ITEM
+        item:
+          id: 404
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '6':
+        type: ITEM
+        item:
+          id: 154
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+  '6':
+    items:
+      '1':
+        type: ITEM
+        item:
+          id: 263
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '2':
+        type: ITEM
+        item:
+          id: 263
+          data: 1
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '3':
+        type: ITEM
+        item:
+          id: 265
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '4':
+        type: ITEM
+        item:
+          id: 266
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '5':
+        type: ITEM
+        item:
+          id: 264
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '6':
+        type: ITEM
+        item:
+          id: 351
+          data: 4
+        buyPrice: 30.0
+        sellPrice: 2.0
+      '7':
+        type: ITEM
+        item:
+          id: 388
+          data: 0
+        buyPrice: 30.0
+        sellPrice: 2.0
