--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,7 @@
 name: zShop
 author: Maxlego08
 main: fr.maxlego08.shop.ZShop
-version: DEV-0.0.0.7
+version: DEV-0.0.0.8
 commands:
   shop:
+    aliases: [zshop]
