--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: zShop
 author: Maxlego08
 main: fr.maxlego08.shop.ZShop
-version: DEV-0.0.1.1
+version: 1.0.0.2
 commands:
   shop:
     aliases: [zshop]
