--- a/items-example-en.yml
+++ b/items-example-en.yml
@@ -29,7 +29,7 @@ items:
             - ENCHANTNAME,ENCHANTLEVEL
           #You will be able to add flags items like that
           flags:
-            - HIDE_ENCHANT
+            - HIDE_ENCHANTS
         #You can set the purchase price here, if you put 0 then the item will not be purchasable
         buyPrice: 30.0
         #You can set the sale price here, if you put 0 then the item will not be salable
