--- a/items-example-fr.yml
+++ b/items-example-fr.yml
@@ -29,7 +29,7 @@ items:
             - ENCHANTNAME,ENCHANTLEVEL
           #Vous allez pouvoir ajouter des items flags comme ça
           flags:
-            - HIDE_ENCHANT
+            - HIDE_ENCHANTS
         #Vous pouvez défini le prix d'achat ici, si vous mettez 0 alors l'item ne sera pas achetable
         buyPrice: 30.0
         #Vous pouvez défini le prix de vente ici, si vous mettez 0 alors l'item ne sera pas vendable
