--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,5 @@
 name: zShop
 author: Maxlego08
 main: fr.maxlego08.shop.ZShop
-version: 1.0.3.9
+version: DEV-2.0
 commands:
-  shop:
-    aliases: [zshop]
