Add default config

--- a/inventories/buy.yml
+++ b/inventories/buy.yml
@@ -6,6 +6,64 @@ items:
     item:
       material: STAINED_GLASS_PANE
       data: 14
-      name: "&cRetour"
+      name: "&cBack"
     type: BACK
     slot: 39
+  accept:
+    item:
+      material: STAINED_GLASS_PANE
+      data: 13
+      name: "&aBuy"
+    type: BUY_CONFIRM
+    slot: 41 
+  settoone:
+    item:
+      material: STAINED_GLASS_PANE
+      data: 14
+      name: "&cSet to 1"
+    type: SET_TO_ONE
+    slot: 18
+  removeten:
+    item:
+      material: STAINED_GLASS_PANE
+      data: 1
+      name: "&cRemove 10"
+    type: REMOVE
+    amount: 10
+    slot: 19
+  removeone:
+    item:
+      material: STAINED_GLASS_PANE
+      data: 4
+      name: "&cRemove 1"
+    type: REMOVE
+    amount: 1
+    slot: 20               
+  addone:
+    item:
+      material: STAINED_GLASS_PANE
+      data: 4
+      name: "&aAdd 1"
+    type: ADD
+    amount: 1
+    slot: 24
+  addten:
+    item:
+      material: STAINED_GLASS_PANE
+      data: 5
+      name: "&aAdd 10"
+    type: ADD
+    amount: 10
+    slot: 25
+  settomax:
+    item:
+      material: STAINED_GLASS_PANE
+      data: 13
+      name: "&aSet to %maxStack%"
+    type: SET_TO_MAX
+    slot: 26
+  show:
+    type: SHOW_ITEM
+    slot: 22
+    lore:
+      - "&eBuy price&8: &b%buyPrice%%currency%"
