--- a/inventories/farm.yml
+++ b/inventories/farm.yml
@@ -1,22 +1,77 @@
-name: "&eFarm"
+name: "&eFarm &8(&6%page%&f/&e%maxPage%&8)"
 size: 54
 items:
-  previous: #Bouton précédant
+  back:
     item:
-      material: ARROW
-      name: "&7Previous page"
-    type: PREVIOUS
+      material: 166
+      name: "&cBack"
+    type: BACK
     slot: 49
-  next: #Bouton suivant
+  next:
     item:
-      material: ARROW
+      material: 262
       name: "&7Next page"
     type: NEXT
-    slot: 51
-  back: #Bouton de retour
+    slot: 50
+  previous:
     item:
-      material: BARRIER
-      name: "&7Back to previous"
-    type: BACK
-    slot: 50    
-    permission: "zshop.blocks.back"      
+      material: 262
+      name: "&7Previous page"
+    type: PREVIOUS
+    slot: 48 
+  1:            
+    item:
+      material: CARROT_ITEM
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 0
+  2:            
+    item:
+      material: POTATO_ITEM
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 1
+  3:            
+    item:
+      material: MELON
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 2
+  4:            
+    item:
+      material: SUGAR_CANE
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 3
+  5:            
+    item:
+      material: WHEAT
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 4
+  6:            
+    item:
+      material: CACTUS
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 5
+  7:            
+    item:
+      material: PUMPKIN
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 6
+  8:            
+    item:
+      material: NETHER_STALK
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 7                           
