--- a/inventories/mobs.yml
+++ b/inventories/mobs.yml
@@ -1,48 +1,78 @@
 name: "&eMobs"
 size: 54
 items:
-  back: #Bouton précédant
+  back:
     item:
       material: 166
-      name: "&cRetour"
+      name: "&cBack"
     type: BACK
     slot: 49
-  next: #Bouton précédant
+  next:
     item:
       material: 262
       name: "&7Next page"
     type: NEXT
     slot: 50
-  previous: #Bouton précédant
+  previous:
     item:
       material: 262
       name: "&7Previous page"
     type: PREVIOUS
-    slot: 48 
-  home: #Bouton précédant
+    slot: 48
+  1:            
     item:
-      material: 399
-      name: "&7Home page"
-    type: HOME #Le home est la page principale de la commande
-    slot: 53 
-  1: 
-    item:
-      material: 160
-      data: 7
-      name: "&7"
-    type: NONE
+      material: 289
+    buyPrice: 2.0
+    sellPrice: 0.0
+    type: ITEM 
     slot: 0
-  2: 
+  2:            
     item:
-      material: 160
-      data: 9
-      name: "&7"
-    type: NONE
+      material: 351
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 1
+  3:            
+    item:
+      material: 334
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
     slot: 2
-  3: 
+  4:            
     item:
-      material: 160
-      data: 8
-      name: "&7"
-    type: NONE
-    slot: 4                   
+      material: 287
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 3
+  5:            
+    item:
+      material: 368
+    buyPrice: 10.0
+    sellPrice: 0.5
+    maxStack: 16
+    type: ITEM 
+    slot: 4
+  6:            
+    item:
+      material: 367
+    buyPrice: 100.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 5
+  7:            
+    item:
+      material: 375
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 6
+  8:       
+    item:
+      material: 341
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 7                      
