--- a/inventories/ores.yml
+++ b/inventories/ores.yml
@@ -1,22 +1,77 @@
 name: "&eOres"
 size: 54
 items:
-  previous: #Bouton précédant
+  back:
     item:
-      material: ARROW
-      name: "&7Previous page"
-    type: PREVIOUS
+      material: 166
+      name: "&cBack"
+    type: BACK
     slot: 49
-  next: #Bouton suivant
+  next:
     item:
-      material: ARROW
+      material: 262
       name: "&7Next page"
     type: NEXT
-    slot: 51
-  back: #Bouton de retour
+    slot: 50
+  previous:
     item:
-      material: BARRIER
-      name: "&7Back to previous"
-    type: BACK
-    slot: 50    
-    permission: "zshop.blocks.back"      
+      material: 262
+      name: "&7Previous page"
+    type: PREVIOUS
+    slot: 48
+  1:            
+    item:
+      material: COAL
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 0
+  2:            
+    item:
+      material: IRON_INGOT
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 1 
+  3:            
+    item:
+      material: GOLD_INGOT
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 2                 
+  4:            
+    item:
+      material: DIAMOND
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 3
+  5:            
+    item:
+      material: 336
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 4
+  6:            
+    item:
+      material: 405
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 5 
+  7:            
+    item:
+      material: 406
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 6 
+  8:            
+    item:
+      material: 338
+    buyPrice: 10.0
+    sellPrice: 0.5
+    type: ITEM 
+    slot: 7                   
