--- a/inventories/redstone.yml
+++ b/inventories/redstone.yml
@@ -1,22 +1,91 @@
 name: "&eRedStone"
 size: 54
 items:
-  previous: #Bouton précédant
+  back:
     item:
-      material: ARROW
-      name: "&7Previous page"
-    type: PREVIOUS
+      material: 166
+      name: "&cBack"
+    type: BACK
     slot: 49
-  next: #Bouton suivant
+  next:
     item:
-      material: ARROW
+      material: 262
       name: "&7Next page"
     type: NEXT
-    slot: 51
-  back: #Bouton de retour
+    slot: 50
+  previous:
     item:
-      material: BARRIER
-      name: "&7Back to previous"
-    type: BACK
-    slot: 50    
-    permission: "zshop.blocks.back"      
+      material: 262
+      name: "&7Previous page"
+    type: PREVIOUS
+    slot: 48
+  1:            
+    item:
+      material: REDSTONE
+    buyPrice: 2.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 0
+  2:            
+    item:
+      material: REDSTONE_BLOCK
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 1
+  3:            
+    item:
+      material: HOPPER
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 2
+  4:            
+    item:
+      material: 356
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 3
+  5:            
+    item:
+      material: 404
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 4
+  6:            
+    item:
+      material: 25
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 5
+  7:            
+    item:
+      material: 33
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 6
+  8:       
+    item:
+      material: 29
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 7 
+  9:       
+    item:
+      material: DROPPER
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 8
+  10:       
+    item:
+      material: DISPENSER
+    buyPrice: 10.0
+    sellPrice: 0.0
+    type: ITEM 
+    slot: 9                                           
