--- a/inventories/1_13/buy.yml
+++ b/inventories/1_13/buy.yml
@@ -4,61 +4,53 @@ type: BUY
 items:
   back:
     item:
-      material: STAINED_GLASS_PANE
-      data: 14
+      material: RED_STAINED_GLASS_PANE
       name: "&cBack"
     type: BACK
     slot: 39
   accept:
     item:
-      material: STAINED_GLASS_PANE
-      data: 13
+      material: GREEN_STAINED_GLASS_PANE
       name: "&aBuy"
     type: BUY_CONFIRM
-    slot: 41 
+    slot: 41
   settoone:
     item:
-      material: STAINED_GLASS_PANE
-      data: 14
+      material: RED_STAINED_GLASS_PANE
       name: "&cSet to 1"
     type: SET_TO_ONE
     slot: 18
   removeten:
     item:
-      material: STAINED_GLASS_PANE
-      data: 1
+      material: ORANGE_STAINED_GLASS_PANE
       name: "&cRemove 10"
     type: REMOVE
     amount: 10
     slot: 19
   removeone:
     item:
-      material: STAINED_GLASS_PANE
-      data: 4
+      material: YELLOW_STAINED_GLASS_PANE
       name: "&cRemove 1"
     type: REMOVE
     amount: 1
-    slot: 20               
+    slot: 20
   addone:
     item:
-      material: STAINED_GLASS_PANE
-      data: 4
+      material: YELLOW_STAINED_GLASS_PANE
       name: "&aAdd 1"
     type: ADD
     amount: 1
     slot: 24
   addten:
     item:
-      material: STAINED_GLASS_PANE
-      data: 5
+      material: LIME_STAINED_GLASS_PANE
       name: "&aAdd 10"
     type: ADD
     amount: 10
     slot: 25
   settomax:
     item:
-      material: STAINED_GLASS_PANE
-      data: 13
+      material: GREEN_STAINED_GLASS_PANE
       name: "&aSet to %maxStack%"
     type: SET_TO_MAX
     slot: 26
@@ -66,4 +58,4 @@ items:
     type: SHOW_ITEM
     slot: 22
     lore:
-      - "&eBuy price&8: &b%buyPrice%%currency%"   
+      - "&eBuy price&8: &b%buyPrice%%currency%"
