--- a/inventories/confirm.yml
+++ b/inventories/confirm.yml
@@ -2,174 +2,37 @@ name: "&eConfirm"
 size: 45
 type: CONFIRM
 items:
-  1: 
+  slots:
+    type: NONE_SLOT
     item:
       material: STAINED_GLASS_PANE
+      data: 7
       name: "&e"
-      data: 8
-    type: NONE
-    slot: 0
-  2: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 1
-  3: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 2
-  4: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 3
-  5: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 4
-  6: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 5
-  7: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 6
-  8: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 7
-  9: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 8
-  10: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 9
-  11: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 17
-  12: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 18
-  13: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 26
-  14: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 27
-  15: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 35
-  16: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 36
-  17: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 37
-  18: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 38
-  19: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 39                                                                          
-  20: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 40
-  21: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 41
-  22: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 42
-  23: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 43
-  24: 
-    item:
-      material: STAINED_GLASS_PANE
-      name: "&e"
-      data: 8
-    type: NONE
-    slot: 44  
+    slots:
+      - 0
+      - 1
+      - 2
+      - 3
+      - 4
+      - 5
+      - 6
+      - 7
+      - 8
+      - 9
+      - 18
+      - 27
+      - 36
+      - 37
+      - 38
+      - 39
+      - 40
+      - 41
+      - 42
+      - 43
+      - 44
+      - 17
+      - 26
+      - 35
   show:
     type: SHOW_ITEM
     slot: 22
