--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
 		</repository>
+		<repository>
+			<id>placeholderapi</id>
+			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -39,6 +43,12 @@
 			<groupId>com.github.shynixn.headdatabase</groupId>
 			<artifactId>hdb-api</artifactId>
 			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>me.clip</groupId>
+			<artifactId>placeholderapi</artifactId>
+			<version>2.10.9</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
