--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: zShop
 author: Maxlego08
 main: fr.maxlego08.shop.ZShop
-version: 2.0.0.5
+version: 2.0.0.6
 api-version: 1.13
-softdepend: [Vault, MySQL-Tokens, TokenManager, PlayerPoints, HeadDatabase, PlaceholderAPI]
+softdepend: [Vault, MySQL-Tokens, TokenManager, PlayerPoints, HeadDatabase, PlaceholderAPI, zSpawner]
 commands:
