--- a/plugin.yml
+++ b/plugin.yml
@@ -3,5 +3,5 @@ author: Maxlego08
 main: fr.maxlego08.shop.ZShop
 version: 2.0.0.9
 api-version: 1.13
-softdepend: [Vault, MySQL-Tokens, TokenManager, PlayerPoints, HeadDatabase, PlaceholderAPI, zSpawner]
+softdepend: [Vault, MySQL-Tokens, TokenManager, PlayerPoints, HeadDatabase, PlaceholderAPI, zSpawner, EpicHeads]
 commands:
