:bug: Update code

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,5 @@
+#Sponsor: https://serveur-minecraft-vote.fr/
+
 #Commands
 
 #You have here the list of commands, you will be able to create an command and link it to an inventory.
