:memo: Edit config files

--- a/inventories/1_13/menu.yml
+++ b/inventories/1_13/menu.yml
@@ -1,3 +1,13 @@
+#########################################################################################################################################
+#
+#
+#   Sponsor: https://serveur-minecraft-vote.fr/
+#   Documentation: https://github.com/Maxlego08/zShop-API/wiki
+#   Discord: https://discord.groupez.dev/
+# 
+#
+#########################################################################################################################################
+
 name: "&eMenu"
 size: 54
 items:
